Almost done adding the second Lambda call to the external API