@@ -4,7 +4,6 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.kenzie.capstone.service.model.GetPlantDetailsResponse;
 import com.kenzie.capstone.service.model.GetPlantListResponse;
 
-import java.util.Collections;
 import java.util.List;
 
 public class PlantListLambdaServiceClient {
@@ -25,7 +24,7 @@ public class PlantListLambdaServiceClient {
         List<GetPlantListResponse> responseList;
 
         try {
-            responseList = Collections.singletonList(mapper.readValue(response, GetPlantListResponse.class));
+            responseList = List.of(mapper.readValue(response, GetPlantListResponse[].class));
 
         } catch (Exception e) {
             throw new ApiGatewayException("Unable to map deserialize JSON: " + e);
@@ -36,18 +35,18 @@ public class PlantListLambdaServiceClient {
 
     public GetPlantDetailsResponse getPlantDetails(String id) {
         EndpointUtility endpointUtility = new EndpointUtility();
-        String response = endpointUtility.getEndpoint(GET_PLANT_DETAILS_ENDPOINT.replace("{id}", id));
+        String handlerResponse = endpointUtility.getEndpoint(GET_PLANT_DETAILS_ENDPOINT.replace("{id}", id));
 
-        GetPlantDetailsResponse handlerResponse;
+        GetPlantDetailsResponse response;
 
         try {
-            handlerResponse = mapper.readValue(response, GetPlantDetailsResponse.class);
+            response = mapper.readValue(handlerResponse, GetPlantDetailsResponse.class);
 
         } catch (Exception e) {
             throw new ApiGatewayException("Unable to map deserialize JSON: " + e);
         }
 
-        return handlerResponse;
+        return response;
     }
 
 
